--- a/portfolio.html
+++ b/portfolio.html
@@ -117,10 +117,14 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="link logo" href="./index.html">Web
-            <span class="footer-span">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-            solutions.</p>
+        <div class="container">
+            <a class="link logo" href="./index.html">Web
+                <span class="footer-span">Studio</span>
+            </a>
+            <p class="footer-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 </html>
