--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="link logo" href="./index.html">Web
+            <a class="link logo-footer" href="./index.html">Web
                 <span class="footer-span">Studio</span>
             </a>
             <p class="footer-text">
