--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="link logo-footer" href="./index.html">Web
+            <a class="logo-footer link" href="./index.html">Web
                 <span class="footer-span">Studio</span>
             </a>
             <p class="footer-text">
