--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </header>
     <main>
         <section class="hero">
-         <h1 class="hero-title">Effective Solutions
-             for Your Business</h1>
-         <button class="btn hero-btn" type="button">Order Service</button>
-            
+            <div class="container">
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <button class="btn hero-btn" type="button">Order Service</button>
+            </div>
         </section>
         <section>
             <h2 hidden class="visually-hidden">Soft skills</h2>
