--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,8 @@
     
     </header>
     <main>
-        <section>
+        <section class="portfolio-section">
+            <div class="container">
             <h1 hidden class="visually-hidden">portfolio</h1>
             <ul class="list">
                 <li><button type="button" class="btn pf-btn">All</button></li>
@@ -114,6 +115,7 @@
                     </a>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
