--- a/portfolio.html
+++ b/portfolio.html
@@ -12,23 +12,24 @@
     <title>Webstudio</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a class="link logo" href="./index.html">Web
-                <span class="logo-dark-part">Studio</span></a>
-            <ul class="list">
-                <li><a class="link header-link" href="./index.html">Studio</a></li>
-                <li><a class="link header-link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="link header-link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="list">
-                <li><a class="link address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
-    
+    <header class="hdr-style">
+        <div class="container header-nav">
+            <nav class="page-nav">
+                <a class="link logo" href="./index.html">Web
+                    <span class="logo-dark-part">Studio</span></a>
+                <ul class="list">
+                    <li><a class="link header-link" href="./index.html">Studio</a></li>
+                    <li><a class="link header-link" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="link header-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="list">
+                    <li><a class="link address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="link address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <section class="portfolio-section">
