--- a/index.html
+++ b/index.html
@@ -47,25 +47,28 @@
                 <button class="btn hero-btn" type="button">Order Service</button>
             </div>
         </section>
-        <section>
-            <h2 hidden class="visually-hidden">Soft skills</h2>
-            <ul class="list"><li>
-                <h3 class="card-title">Strategy</h3>
-                <p class="card-text">Our goal is to identify the business
-                problem to walk away with the perfect and creative solution.</p>
-            </li>
-            <li>
-                <h3 class="card-title">Punctuality</h3>
-                <p class="card-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li>
-                <h3 class="card-title">Diligence</h3>
-                <p class="card-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li>
-                <h3 class="card-title">Technologies</h3>
-                <p class="card-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li></ul>
+        <section class="main-about">
+            <div class="container">
+                <h2 hidden class="visually-hidden">Soft skills</h2>
+                <ul class="list">
+                <li class="about-company-item">
+                    <h3 class="card-title">Strategy</h3>
+                    <p class="card-text">Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li class="about-company-item">
+                    <h3 class="card-title">Punctuality</h3>
+                    <p class="card-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li class="about-company-item">
+                    <h3 class="card-title">Diligence</h3>
+                    <p class="card-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li class="about-company-item">
+                    <h3 class="card-title">Technologies</h3>
+                    <p class="card-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li></ul>
+            </div>
         </section>
         <section class="descr">
             <h2 class="descr-title">What are we doing</h2>
