--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section class="main-about">
             <div class="container">
-                <h2 hidden class="visually-hidden">Soft skills</h2>
+                <h2 class="visually-hidden">Soft skills</h2>
                 <ul class="about-company list">
                     <li class="about-company-item">
                         <h3 class="card-title">Strategy</h3>
