--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,14 @@
             <nav class="page-nav">
                 <a class="link logo" href="./index.html">Web
                     <span class="logo-dark-part">Studio</span></a>
-                <ul class="list">
+                <ul class="list header-list">
                     <li><a class="link header-link" href="./index.html">Studio</a></li>
                     <li><a class="link header-link" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="link header-link" href="">Contacts</a></li>
                 </ul>
             </nav>
             <address class="address">
-                <ul class="list">
+                <ul class="list header-list">
                     <li><a class="link address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="link address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
@@ -35,7 +35,7 @@
         <section class="portfolio-section">
             <div class="container">
             <h1 hidden class="visually-hidden">portfolio</h1>
-            <ul class="list">
+            <ul class="list pf-btn-list">
                 <li><button type="button" class="btn pf-btn">All</button></li>
                 <li><button type="button" class="btn pf-btn">Web Site</button></li>
                 <li><button type="button" class="btn pf-btn">App</button></li>
