--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </section>
         <section class="main-about">
             <div class="container">
-                <h2 class="visually-hidden">Soft skills</h2>
-                <ul class="about-company list">
+                <h2 hidden class="visually-hidden">Soft skills</h2>
+                <ul class="list">
                     <li class="about-company-item">
                         <h3 class="card-title">Strategy</h3>
                         <p class="card-text">Our goal is to identify the business
