--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
             </div>
         </section>
         <section class="descr">
-            <h2 class="descr-title">What are we doing</h2>
-            <ul class="list">
-            <li><img src="./images/img_1.jpg" alt="Monitor" width="360" height="300"></li>
-            <li><img src="./images/img_2.jpg" alt="Telefon Chat" width="360" height="300"></li>
-            <li><img src="./images/img_3.jpg" alt="Telefon Programma" width="360" height="300"></li>
-            </ul>
+            <div class="container">
+                <h2 class="descr-title">What are we doing</h2>
+                <ul class="list">
+                <li><img src="./images/img_1.jpg" alt="Monitor" width="360" height="300"></li>
+                <li><img src="./images/img_2.jpg" alt="Telefon Chat" width="360" height="300"></li>
+                <li><img src="./images/img_3.jpg" alt="Telefon Programma" width="360" height="300"></li>
+                </ul>
+            </div>
         </section>
         <section class="team">
             <h2 class="team-title">Our Team</h2>
