--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <div class="container">
                 <h2 class="descr-title">What are we doing</h2>
                 <ul class="list">
-                <li><img src="./images/img_1.jpg" alt="Monitor" width="360" height="300"></li>
-                <li><img src="./images/img_2.jpg" alt="Telefon Chat" width="360" height="300"></li>
-                <li><img src="./images/img_3.jpg" alt="Telefon Programma" width="360" height="300"></li>
+                <li class="descr-img-item"><img src="./images/img_1.jpg" alt="Monitor" width="360" height="300"></li>
+                <li class="descr-img-item"><img src="./images/img_2.jpg" alt="Telefon Chat" width="360" height="300"></li>
+                <li class="descr-img-item"><img src="./images/img_3.jpg" alt="Telefon Programma" width="360" height="300"></li>
                 </ul>
             </div>
         </section>
