--- a/index.html
+++ b/index.html
@@ -82,25 +82,39 @@
             </div>
         </section>
         <section class="team">
-            <h2 class="team-title">Our Team</h2>
-            <ul class="list">
-            <li class="card"><img src="./images/img.jpg" alt="Product Designer" width="264" height="260">
-                <h3 class="card-title">Mark Guerrero</h3>
-                <p class="card-text">Product Designer</p>
-            </li>
-            <li class="card"><img src="./images/img1.jpg" alt="Frontend Developer" width="264" height="260">
-                <h3 class="card-title">Tom Ford</h3>
-                <p class="card-text">Frontend Developer</p>
-            </li>
-            <li class="card"><img src="./images/img2.jpg" alt="Marketing" width="264" height="260">
-                <h3 class="card-title">Camila Garcia</h3>
-                <p class="card-text">Marketing</p>
-            </li>
-            <li class="card"><img src="./images/img3.jpg" alt="UI Designer" width="264" height="260">
-                <h3 class="card-title">Daniel Wilson</h3>
-                <p class="card-text">UI Designer</p>
-            </li>
-            </ul>
+            <div class="container">
+                <h2 class="team-title">Our Team</h2>
+                <ul class="list">
+                    <li class="card">
+                        <img src="./images/img.jpg" alt="Product Designer" width="264" height="260">
+                        <div class="team-member-info">
+                            <h3 class="card-title">Mark Guerrero</h3>
+                            <p class="card-text">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="./images/img1.jpg" alt="Frontend Developer" width="264" height="260">
+                        <div class="team-member-info">
+                            <h3 class="card-title">Tom Ford</h3>
+                            <p class="card-text">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="./images/img2.jpg" alt="Marketing" width="264" height="260">
+                        <div class="team-member-info">
+                            <h3 class="card-title">Camila Garcia</h3>
+                            <p class="card-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="./images/img3.jpg" alt="UI Designer" width="264" height="260">
+                        <div class="team-member-info">
+                            <h3 class="card-title">Daniel Wilson</h3>
+                            <p class="card-text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>    
     </main>
     <footer class="footer">
