--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="logo-footer link" href="./index.html">Web
-                <span class="footer-span">Studio</span>
+            <a class="logo-footer link" href="./index.html">
+                Web<span class="footer-span">Studio</span>
             </a>
             <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
