--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="foot logo-footer" href="./index.html">
+            <a class="logo-footer" href="./index.html">
                 Web<span class="footer-span">Studio</span>
             </a>
             <p class="footer-text">
