--- a/portfolio.html
+++ b/portfolio.html
@@ -56,72 +56,90 @@
                     <a href="" class="link">
                         <img src="./images/menu.jpg"
                         alt="Menu" width="360" height="300">
-                        <h2 class="portfolio-h-two">Banking App Interface Concept</h2>
-                        <p class="portfolio-p">App</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Banking App Interface Concept</h2>
+                            <p class="portfolio-p">App</p>
+                        </div>
                     </a> 
                 </li>
                 <li class="card">
                     <a href="" class="link">
                         <img src="./images/kod.jpg"
                         alt="Kod" width="360" height="300">
-                        <h2 class="portfolio-h-two">Cashless Payment</h2>
-                        <p class="portfolio-p">Marketing</p> 
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Cashless Payment</h2>
+                            <p class="portfolio-p">Marketing</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card">
                     <a href="" class="link">
                         <img src="./images/laptop.jpg"
                         alt="Laptop" width="360" height="300">
-                        <h2 class="portfolio-h-two">Meditation App</h2>
-                        <p class="portfolio-p">App</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Meditation App</h2>
+                            <p class="portfolio-p">App</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card"> 
                     <a href="" class="link">
                         <img src="./images/taxi.jpg"
                         alt="Taxi" width="360" height="300">
-                        <h2 class="portfolio-h-two">Taxi Service</h2>
-                        <p class="portfolio-p">Marketing</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Taxi Service</h2>
+                            <p class="portfolio-p">Marketing</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card"> 
                     <a href="" class="link">
                         <img src="./images/background.jpg"
                         alt="Background" width="360" height="300">
-                        <h2 class="portfolio-h-two">Screen Illustrations</h2>
-                        <p class="portfolio-p">Design</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Screen Illustrations</h2>
+                            <p class="portfolio-p">Design</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card">
                     <a href="" class="link">
                         <img src="./images/girl.jpg"
                         alt="Girl" width="360" height="300">
-                        <h2 class="portfolio-h-two">Online Courses</h2>
-                        <p class="portfolio-p">Marketing</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Online Courses</h2>
+                            <p class="portfolio-p">Marketing</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card">
                     <a href="" class="link">
                         <img src="./images/insta.jpg"
                         alt="Insta" width="360" height="300">
-                        <h2 class="portfolio-h-two">Instagram Stories Concept</h2>
-                        <p class="portfolio-p">Design</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Instagram Stories Concept</h2>
+                            <p class="portfolio-p">Design</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card">
                     <a href="" class="link">
                         <img src="./images/food.jpg"
                         alt="Food" width="360" height="300">
-                        <h2 class="portfolio-h-two">Organic Food</h2>
-                        <p class="portfolio-p">Web Site</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Organic Food</h2>
+                            <p class="portfolio-p">Web Site</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card">
                     <a href="" class="link">
                         <img src="./images/coffee.jpg"
                         alt="Coffee" width="360" height="300">
-                        <h2 class="portfolio-h-two">Fresh Coffee</h2>
-                        <p class="portfolio-p">Web Site</p>
+                        <div class="pf-card-descr">
+                            <h2 class="portfolio-h-two">Fresh Coffee</h2>
+                            <p class="portfolio-p">Web Site</p>
+                        </div>
                     </a>
                 </li>
             </ul>
