--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                 <li><button type="button" class="btn pf-btn">Marketing</button></li>
             </ul>
             <ul class="list">
-                <li class="card"> 
+                <li class="card pf-item"> 
                     <a href="" class="link">
                         <img src="./images/menu.jpg"
                         alt="Menu" width="360" height="300">
@@ -62,7 +62,7 @@
                         </div>
                     </a> 
                 </li>
-                <li class="card">
+                <li class="card pf-item">
                     <a href="" class="link">
                         <img src="./images/kod.jpg"
                         alt="Kod" width="360" height="300">
@@ -72,7 +72,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card">
+                <li class="card pf-item">
                     <a href="" class="link">
                         <img src="./images/laptop.jpg"
                         alt="Laptop" width="360" height="300">
@@ -82,7 +82,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card"> 
+                <li class="card pf-item"> 
                     <a href="" class="link">
                         <img src="./images/taxi.jpg"
                         alt="Taxi" width="360" height="300">
@@ -92,7 +92,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card"> 
+                <li class="card pf-item"> 
                     <a href="" class="link">
                         <img src="./images/background.jpg"
                         alt="Background" width="360" height="300">
@@ -102,7 +102,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card">
+                <li class="card pf-item">
                     <a href="" class="link">
                         <img src="./images/girl.jpg"
                         alt="Girl" width="360" height="300">
@@ -112,7 +112,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card">
+                <li class="card pf-item">
                     <a href="" class="link">
                         <img src="./images/insta.jpg"
                         alt="Insta" width="360" height="300">
@@ -122,7 +122,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card">
+                <li class="card pf-item">
                     <a href="" class="link">
                         <img src="./images/food.jpg"
                         alt="Food" width="360" height="300">
@@ -132,7 +132,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card">
+                <li class="card pf-item">
                     <a href="" class="link">
                         <img src="./images/coffee.jpg"
                         alt="Coffee" width="360" height="300">
