--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                 <li><button type="button" class="btn pf-btn">Design</button></li>
                 <li><button type="button" class="btn pf-btn">Marketing</button></li>
             </ul>
-            <ul class="list">
+            <ul class="list pf-list">
                 <li class="card pf-item"> 
                     <a href="" class="link">
                         <img src="./images/menu.jpg"
