--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section class="main-about">
             <div class="container">
                 <h2 class="visually-hidden">Soft skills</h2>
-                <ul class="list header-list">
+                <ul class="list section-list">
                     <li class="about-company-item">
                         <h3 class="card-title">Strategy</h3>
                         <p class="card-text">Our goal is to identify the business
@@ -74,7 +74,7 @@
         <section class="descr">
             <div class="container">
                 <h2 class="descr-title">What are we doing</h2>
-                <ul class="list header-list">
+                <ul class="list section-list">
                 <li class="descr-img-item"><img src="./images/img_1.jpg" alt="Monitor" width="360" height="300"></li>
                 <li class="descr-img-item"><img src="./images/img_2.jpg" alt="Telefon Chat" width="360" height="300"></li>
                 <li class="descr-img-item"><img src="./images/img_3.jpg" alt="Telefon Programma" width="360" height="300"></li>
@@ -84,7 +84,7 @@
         <section class="team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
-                <ul class="list header-list">
+                <ul class="list section-list">
                     <li class="card">
                         <img src="./images/img.jpg" alt="Product Designer" width="264" height="260">
                         <div class="team-member-info">
