--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="link logo logo-footer" href="./index.html">
+            <a class="logo-footer link logo" href="./index.html">
                 Web<span class="footer-span">Studio</span>
             </a>
             <p class="footer-text">
