--- a/portfolio.html
+++ b/portfolio.html
@@ -149,9 +149,8 @@
     <footer class="footer">
         <div class="container">
             <a class="footer-link link logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
         </div>
     </footer>
 </body>
