--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="footer-link" href="./index.html">Web<span class="footer-span">Studio</span></a>
+            <a class="footer-link link logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
