--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                <button class="btn hero-btn" type="button">Order Service</button>
+                <h1 class="hero-title">
+                    Effective Solutions for Your Business
+                </h1>
+                <button class="btn hero-btn" type="button">
+                    Order Service
+                </button>
             </div>
         </section>
         <section class="main-about">
@@ -75,9 +79,15 @@
             <div class="container">
                 <h2 class="descr-title">What are we doing</h2>
                 <ul class="list section-list">
-                <li class="descr-img-item"><img src="./images/img_1.jpg" alt="Monitor" width="360" height="300"></li>
-                <li class="descr-img-item"><img src="./images/img_2.jpg" alt="Telefon Chat" width="360" height="300"></li>
-                <li class="descr-img-item"><img src="./images/img_3.jpg" alt="Telefon Programma" width="360" height="300"></li>
+                    <li class="descr-img-item">
+                        <img src="./images/img_1.jpg" alt="Monitor" width="360" height="300">
+                    </li>
+                    <li class="descr-img-item">
+                        <img src="./images/img_2.jpg" alt="Telefon Chat" width="360" height="300">
+                    </li>
+                    <li class="descr-img-item">
+                        <img src="./images/img_3.jpg" alt="Telefon Programma" width="360" height="300">
+                    </li>
                 </ul>
             </div>
         </section>
@@ -119,8 +129,13 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="footer-link link logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <a href="./index.html" class="footer-link link logo">
+                "Web"
+                <span class="footer-span">Studio</span>
+            </a>
+            <p class="footer-text">
+                "Increase the flow of customers and sales for your business with digital marketing & growth solutions."
+            </p>
         </div>
     </footer>
 </body>
