--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="footer-link link logo">
-                "Web"
+                Web
                 <span class="footer-span">Studio</span>
             </a>
             <p class="footer-text">
-                "Increase the flow of customers and sales for your business with digital marketing & growth solutions."
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
         </div>
     </footer>
